# Attract-wealth

./: .env.example  .gitignore  AUDIT_REPORT.md  README.md  _schema_keys.txt  implementation_plan.md  out.json  out2.json  pyproject.toml  requirements.txt  一键启动.bat  启动.bat
.github/workflows/: build.yml
config/: autopilot_templates.json  default.toml  llm_providers.toml  llm_runtime.json  risk_limits.toml  system_runtime.json  trading_calendar_cn.json
data/: laicai.db-shm  laicai.db-wal
data/p4_smoke/: laicai.db  strategies.db  trading_ledger.db
data/stability/: budget_recovery_probe_latest.json  profile_apply_dev_default_baseline.json  profile_apply_latest.json  profile_apply_prod_live_baseline.json  profile_apply_sim_default_baseline.json  profile_probe_dev_default_baseline.json  profile_probe_prod_live_baseline.json  profile_probe_sim_default_baseline.json  stability_baseline_dev_sim_latest.json  stability_baseline_latest.json
scripts/: smoke_test.py  start.bat
scripts/closure/: run_p1_p4_closure.py
scripts/contracts/: sync_openapi_types.py
scripts/dataflow/: apply_runtime_profile.py  budget_recovery_probe.py  run_stability_baseline.py  stability_probe.py
scripts/dev/: cleanup_pytest_temp.py
scripts/evidence/: validate_evidence_schema.py
scripts/installer/: laiCai.iss  laiCai.spec
scripts/smoke/: P1_H2_P2_B3_SEALOFF_CHECKLIST.md  REAL_ENV_CHECKLIST.md  live_channel_smoke.py  run_channel_matrix.py  run_oneclick_gate.bat  run_oneclick_gate.py  run_sealoff_gate.bat  run_sealoff_gate.py  run_startup_preflight.bat  run_startup_preflight.py  run_strict_gate.bat  run_strict_gate.py  run_ths_mode_gate.py
scripts/strategy/: calibrate_weights.py  p4_lifecycle_smoke.py
scripts/ths/: THS_HOST_AUTOSTART.md  install_host_autostart.py  run_easytrader_probe.py  run_easytrader_setup_and_probe.py  (+3 more)
src/: __init__.py  main.py
tests/: conftest.py
(+397 files in other folders)
